<resources>
    <string name="app_name">Student_Test</string>
    <string name="nume">NUME: </string>
    <string name="varsta">VARSTA: </string>
    <string name="json">JSON: </string>
    <string name="salvare_json">Salvare JSON</string>
    <string name="salvare">Salvare</string>
    <string name="incarcare">Incarcare</string>
    <string name="fisier_json">fisier json</string>
    <string name="name">name</string>
    <string name="_18">18</string>
    <string name="stergere">Stergere</string>
    <string name="lista_studenti">Lista Studenti</string>
    <string name="lista_favorite">Lista Favorite</string>
    <string name="numele">numele</string>
    <string name="varsta_student">varsta</string>
</resources>